Division en paginas

--- a/ExampleFinkok/ExampleFinkok.csproj
+++ b/ExampleFinkok/ExampleFinkok.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\Finkok\GenerateXML.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.ServiceModel.Duplex" Version="4.8.*" />
     <PackageReference Include="System.ServiceModel.Federation" Version="4.8.*" />
     <PackageReference Include="System.ServiceModel.Http" Version="4.8.*" />
@@ -22,6 +26,22 @@
     <Reference Include="DemoFinkok">
       <HintPath>..\DLLFinkok\DemoFinkok.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\Factureya\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Finkok\GenerateXML.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\Finkok\GenerateXML.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\Finkok\GenerateXML.cshtml" />
   </ItemGroup>
 
 </Project>
