Cambios y pruebas de generacion de XML

--- a/ExampleFinkok/ExampleFinkok.csproj
+++ b/ExampleFinkok/ExampleFinkok.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FinkokFunctions\FinkokFunctions.csproj" />
+    <ProjectReference Include="..\XMLFunctions\XMLFunctions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
