--- a/ExampleFinkok/ExampleFinkok.csproj
+++ b/ExampleFinkok/ExampleFinkok.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\compiledFiles\" />
     <Folder Include="wwwroot\stamped\" />
   </ItemGroup>
 
